src/snapshots/afrotd__parser__tests__interpreation_html_5.2.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.2.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s legaler Vorwärtspass prallt im vierten Down auf den Boden,
            nachdem er einen ursprünglich unberechtigten Team A-Spieler berührt
            hat, der sich illegal mehr als drei Meter jenseits der neutralen
            Zone befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul, unberechtigt downfield – 5 Meter vom Previous Spot. Team
                B’s Ball, First Down und 10, wenn die Strafe abgelehnt wird
                (Regel 7.3.10).
            </p>
        </details>
    </div>
</article>
