src/snapshots/afrotd__parser__tests__interpreation_html_5.2.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.2.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 2 von der A-35. A1 fängt den Snap und fumbelt den Ball an
            der A-38 und der Ball geht (a) an der A-40 oder (b) an der A-30 ins
            Aus. Unmittelbar nachdem der Ball ins Aus gerollt ist, begeht Team
            A ein persönliches Foul.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Team A’s Ball, First Down und 10 von der A-23. Die Game
                Clock startet mit der Ballfreigabe. (b) Team B’s Ball, First
                Down und 10 von der A-15. Die Game Clock startet mit dem Snap.
            </p>
        </details>
    </div>
</article>
