src/snapshots/afrotd__parser__tests__interpreation_html_5.2.7_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.2.7.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 4 von der 50-Meterlinie. Nachdem der Ball spielbereit ist
            und vor dem Snap bewegt sich B60 durch die neutrale Zone und
            berührt dort Snapper A50. A61 foult danach B60. A61’s Foul war ein
            persönliches Foul.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B wird mit 5 Metern für das Offside bestraft. Danach wird
                Team A mit 15 Metern bestraft. Die Kette und der Downanzeiger
                werden verschoben; Team A’s Ball, 1. und 10 von der A-40.
            </p>
        </details>
    </div>
</article>
