src/snapshots/afrotd__parser__tests__interpreation_html_5.2.7_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.2.7.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach der Erzielung eines First Downs durch Team A hat der Umpire
            den Ball an der B-30 auf dem Boden platziert. Der Referee zeigt dem
            Umpire an, dass sich dieser in seine Position bewegen kann, und
            bevor er den Ball freigeben kann, snappt A55 den Ball.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul Team A, Spielverzögerung. 5-Meterstrafe, 1. und
                10 von der B-35. Beachte: Das ist ein Foul zwischen den Serien,
                da es sich ereignet, bevor der Ball für die nächste Serie
                freigegeben wurde. Daher ist es ein 1. und 10, kein 1. und 15
                (Regeln 4.1.1, 4.1.4).
            </p>
        </details>
    </div>
</article>
