src/snapshots/afrotd__parser__tests__interpreation_html_6.1.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.1.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Der Free Kicker A11 stellt den Ball auf ein Tee direkt an der
            rechten Hash Mark. Alle anderen Mitspieler stellen sich zu seiner
            Linken auf. Bei der Ballfreigabe laufen vier Team A-Spieler, die
            sich auf A11’s linker Seite befanden, auf die rechte Seite und
            befinden sich in der Zone auf A11’s rechter Seite, als A11 den Ball
            kickte.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legale Formation.
            </p>
        </details>
    </div>
</article>
