src/snapshots/afrotd__parser__tests__interpreation_html_6.2.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.2.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Free Kick von der A-35 geht, unberührt von Team B, zwischen den
            Goallines ins Aus und Team A begeht ein Offside.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B hat drei Optionen: Es kann eine 5-Meterstrafe vom
                Previous Spot akzeptieren, wobei Team A von der A-30 den
                Kickoff wiederholt, den Ball an der B-35 am Inbounds Spot
                snappen oder den Ball nach einer 5Meterstrafe von dem Punkt, an
                dem der Ball ins Aus ging, am Inbounds Spot snappen.
            </p>
        </details>
    </div>
</article>
