src/snapshots/afrotd__parser__tests__interpreation_html_6.2.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.2.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Free Kick streift im Flug einen Team B-Spieler, der in seiner
            Endzone steht und danach geht der Ball auf der B-3 in Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Ball an der B-3 am Inbounds Spot.
            </p>
        </details>
    </div>
</article>
