src/snapshots/afrotd__parser__tests__interpreation_html_6.3.11_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.11.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A snappt von der 50-Meterlinie und puntet. Der Kick ist
            jenseits der neutralen Zone unberührt, als A88 über die Goalline
            greift und den Ball ins Spielfeld zurückschlägt. B22 recovert an
            der B-2 und advanct bis zu der B-12, wo A66 ihn tackelt, indem er
            ihn am Helmgitter zieht.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul für Schlagen des Balles in der Endzone. Illegales
                Berühren. Team B kann die Strafe für das Ziehen am Helmgitter
                annehmen, wodurch das Privileg des illegalen Berührens
                aufgehoben wird. Team B’s Ball, First Down und 10 von der B-27.
            </p>
        </details>
    </div>
</article>
