src/snapshots/afrotd__parser__tests__interpreation_html_6.3.11_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.11.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A kickt von der 50-Meterlinie. Während des Kicks clippt B1 an
            der B-25. Der unberührte Kick wird von Team A aus der Endzone
            zurückgeschlagen und geht an der B-2 ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul für Schlagen des Balles in der Endzone. Illegales
                Berühren. B77’s Clipping Foul wird gemäß den Postscrimmage
                Kick-Regeln durchgeführt. Team A nimmt die Strafe an, wodurch
                das Privileg hinsichtlich illegalen Berührens aufgehoben wird.
                Die Strafe wird vom Postscrimmage Kick Enforcement Spot, B-20
                mit Distanzhalbierung, durchgeführt. B’s Ball, 1. und 10 von
                der B-10.
            </p>
        </details>
    </div>
</article>
